--- a/src/app/components/weather/weather.component.html
+++ b/src/app/components/weather/weather.component.html
@@ -6,8 +6,9 @@
                     {{ city }}
                 </h5>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Temperature: {{ temp }}</li>
-                    <li class="list-group-item">Feels Like: {{ realFeal }}</li>
+                    <li class="list-group-item">OpenWeather: {{ temp }}</li>
+                    <li class="list-group-item">Feels Like: {{ realFeal }}</li>                    
+                    <li class="list-group-item"><a href="{{ weatherGovURL }}" target="_blank">weather.gov</a>: {{ currentGovWeather }}</li>
                 </ul>
             </div>
         </div>
